# todosaga

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  openapi.yaml  pyproject.toml
nginx/: default.conf
poc/: todo_classification.py  todo_recommend.py
todosaga/: langchain_utils.py  manage.py  models.py  quest.py  worker.py
todosaga/archievements/: apps.py
todosaga/settings/: base.py  development.py  production.py
todosaga/todos/: langchain_utils.py  models.py  recommend.py  routes.py  serializers.py  urls.py  views.py  websocket.py  worker.py
todosaga/todos/api/: routes.py
todosaga/todos/services/: todo_services.py
todosaga/todosaga/: asgi.py  settings.py  urls.py  wsgi.py
todosaga/todosaga/settings/: base.py
