[project]
name = "todosaga"
version = "0.1.0"
description = "this is a simple todo app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=4.2.0",
    "django-cors-headers>=4.3.0",
    "djangorestframework>=3.14.0",
    "gunicorn>=21.2.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "openai>=1.0.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "whitenoise>=6.6.0",
]
